# automata

./: .gitignore  README.md  pyproject.toml  state_counts.csv
automata/: automata.py  counts.py  impl.py  parser.py  position.py  tree.py
tests/: test_automata.py  test_parser.py  test_position.py  test_tree.py
